--- a/example/toFixed.html
+++ b/example/toFixed.html
@@ -87,6 +87,9 @@
 
         eq(isRangeError === 'RangeError', true);
       },
+      'TODO: test negative numbers': function() {
+        fail();
+      },
       'If run on a 10,000,000 random floats, it should work. (thanks @jxofficial for this idea!)': function() {
         // brought @jxofficial's test in here, slight tweaks, but his code entirely.
         //   function randomFloatBetween(minValue, maxValue) {
