--- a/example/toFixed.html
+++ b/example/toFixed.html
@@ -87,19 +87,22 @@
 
         eq(isRangeError === 'RangeError', true);
       },
+      'TODO: test negative numbers': function() {
+       fail(); 
+      },
       'If run on a 10,000,000 random floats, it should work. (thanks @jxofficial for this idea!)': function() {
         // brought @jxofficial's test in here, slight tweaks, but his code entirely.
-        //   function randomFloatBetween(minValue, maxValue) {
-        //     return parseFloat(Math.min(minValue + (Math.random() * (maxValue - minValue)), maxValue));
-        //   }
-        //   var arr = [];
-        //   var mappedArr = [];
-        //   for (var i = 0; i < 10000000; i++) {
-        //     arr.push(randomFloatBetween(1, 9999));
-        //   }
+          // function randomFloatBetween(minValue, maxValue) {
+          //   return parseFloat(Math.min(minValue + (Math.random() * (maxValue - minValue)), maxValue));
+          // }
+          // var arr = [];
+          // var mappedArr = [];
+          // for (var i = 0; i < 10000000; i++) {
+          //   arr.push(randomFloatBetween(1, 9999));
+          // }
 
-        //   var expected = arr.map(num => toFixed(num, 4));
-        //   mappedArr.forEach((num, i) => eq(num, expected[i]));
+          // var expected = arr.map(num => toFixed(num, 4));
+          // mappedArr.forEach((num, i) => eq(num, expected[i]));
       }
     });
   </script>
