--- a/example/toFixed.html
+++ b/example/toFixed.html
@@ -29,8 +29,8 @@
         eq(toFixedTwist(1.15, 1), '1.2');
         eq(toFixedTwist(1.5, 0), '2');
 
-        eq(toFixedTwist(-1.15, 1), '-1.2');
-        eq(toFixedTwist(-1.5, 0), '-2');
+        eq(toFixedTwist(-1.15, 1), '-1.1');
+        eq(toFixedTwist(-1.5, 0), '-1');
       },
       'It should correctly represent fixed numbers less than 1 (eg 0.123).': function() {
         eq(toFixedTwist(0.123, 2), '0.12');
@@ -46,15 +46,26 @@
         eq(toFixedTwist(1.005, 2), '1.01');
         eq(toFixedTwist(2.55, 1), '2.6');
 
-        eq(toFixedTwist(-0.615, 2), '-0.62');
-        eq(toFixedTwist(-10.235, 2), '-10.24');
-        eq(toFixedTwist(-1.005, 2), '-1.01');
-        eq(toFixedTwist(-2.55, 1), '-2.6');
+        eq(toFixedTwist(-0.615, 2), '-0.61');
+        eq(toFixedTwist(-10.235, 2), '-10.23');
+        eq(toFixedTwist(-1.005, 2), '-1.00');
+        eq(toFixedTwist(-2.55, 1), '-2.5');
+      },
+      'It should handle negative numbers': function() {
+        eq(toFixedTwist(-1.52, 1), '-1.5');
+        eq(toFixedTwist(-1.55, 1), '-1.5');
+        eq(toFixedTwist(-1.56, 1), '-1.6');
+
+        eq(toFixedTwist(-1.5, 2), '-1.50');
+        eq(toFixedTwist(-0.5, 0), '0');
+        eq(toFixedTwist(-0.6, 0), '-1');
       },
       'It should handle numbers in exponential notation': function() {
         eq(toFixedTwist(1e2, 2), '100.00');
+        eq(toFixedTwist(1e-2, 2), '0.01');
 
-        // TODO
+        eq(toFixedTwist(-1e2, 2), '-100.00');
+        eq(toFixedTwist(-1e-2, 2), '-0.01');
       },
       'It should handle string representation of number.': function() {
         eq(toFixedTwist('42', 2), '42.00');
@@ -68,7 +79,7 @@
         eq(toFixedTwist([1.005], 2), '1.01');
 
         eq(toFixedTwist([-2], 0), '-2');
-        eq(toFixedTwist([-1.005], 2), '-1.01');
+        eq(toFixedTwist([-1.005], 2), '-1.00');
       },
       'It should throw TypError if number is NaN': function() {
         var isTypeError = '';
@@ -103,20 +114,20 @@
         eq(isRangeError === 'RangeError', true);
       },
       'If run on a 10,000,000 random floats, it should work. (thanks @jxofficial for this idea!)': function() {
-        /** brought @jxofficial's test in here, slight tweaks, but his code entirely.
-         *
-         * function randomFloatBetween(minValue, maxValue) {
-         *   return parseFloat(Math.min(minValue + (Math.random() * (maxValue - minValue)), maxValue));
-         * }
-         * var arr = [];
-         * var mappedArr = [];
-         * for (var i = 0; i < 10000000; i++) {
-         *   arr.push(randomFloatBetween(1, 9999));
-         * }
-         * var expected = arr.map(num => toFixedTwist(num, 4));
-         * mappedArr.forEach((num, i) => eq(num, expected[i]));
-         * }
-        */
+        // brought @jxofficial's test in here, slight tweaks, but his code entirely.
+        function randomFloatBetween(minValue, maxValue) {
+          return parseFloat(Math.min(minValue + (Math.random() * (maxValue - minValue)), maxValue));
+        }
+
+        var arr = [];
+        var mappedArr = [];
+
+        for (var i = 0; i < 10000000; i++) {
+          arr.push(randomFloatBetween(1, 9999));
+        }
+
+        var expected = arr.map(num => toFixedTwist(num, 4));
+        mappedArr.forEach((num, i) => eq(num, expected[i]));
       }
     });
   </script>
